dag-encoder/src/ir/snapshots/dag_encoder__ir__program__tests__+.snap
---
source: dag-encoder/src/ir/program.rs
expression: "Program::new(vec![format!(\"{}\", sign)], vec![])"
---
# symbols
- \+
# instructions
