dag-encoder/src/ir/snapshots/dag_encoder__ir__program__tests__display_closure_with_if.snap
---
source: dag-encoder/src/ir/program.rs
expression: "Program::new(vec![],\nvec![Instruction::Constant(Operand::Integer(0)),\nInstruction::Constant(Operand::Integer(1)),\nInstruction::Close(42,\nvec![Instruction::Constant(Operand::Integer(2)),\nInstruction::If(vec![Instruction::Constant(Operand::Integer(3)),\nInstruction::Constant(Operand::Integer(4)),]),\nInstruction::Constant(Operand::Integer(5)),\nInstruction::Constant(Operand::Integer(6)),],),\nInstruction::Constant(Operand::Integer(7)),\nInstruction::Constant(Operand::Integer(8)),],)"
---
# symbols
# instructions
- constant i0
- constant i1
- close 42
  - constant i2
  - if
    - constant i3
    - constant i4
  - constant i5
  - constant i6
- constant i7
- constant i8
