dag-encoder/src/ir/snapshots/dag_encoder__ir__program__tests__display_if.snap
---
source: dag-encoder/src/ir/program.rs
expression: "Program::new(vec![],\nvec![Instruction::If(vec![Instruction::Constant(Operand::Integer(42))])],)"
---
# symbols
# instructions
- if
  - constant i42
