dag-encoder/src/ir/snapshots/dag_encoder__ir__program__tests__display_symbols.snap
---
source: dag-encoder/src/ir/program.rs
expression: "Program::new(vec![\"foo\".into(), \"bar\".into()], vec![],)"
---
# symbols
- foo
- bar
# instructions
